@@ -1,3 +1,8 @@
+Tue Sep  8 08:32:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/dl/test_{cfunc,ptr}.rb: added tests from Aaron Patterson.
+	  see [ruby-dev:39249].
+
 Tue Mar  3 15:03:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* test/dl: moved from ext/dl/test.
